enhanced login and signup pages
